--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,66 @@
-aiohappyeyeballs
-aiohttp
-aiosignal
-altair
-attrs
-blinker
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-colorama
-contourpy
-cycler
-filelock
-fonttools
-frozenlist
-fsspec
-gitdb
-GitPython
-idna
-Jinja2
-jsonschema
-jsonschema-specifications
-kiwisolver
-MarkupSafe
-matplotlib
-mpmath
-multidict
-narwhals
-networkx
-numpy
-opencv-python-headless
-packaging
-pandas
-pillow
-plotly
-propcache
-protobuf
-pyarrow
-pycparser
-pydeck
-pyparsing
-python-dateutil
-pytz
-referencing
-requests
-rpds-py
-scipy
-six
-smmap
-soundfile
-streamlit
-streamlit-option-menu
-sympy
-tenacity
-toml
-torch
-torchvision
-tornado
-typing_extensions
-tzdata
-urllib3
-watchdog
-wfdb
-yarl
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal==1.4.0
+altair==5.5.0
+attrs==25.4.0
+blinker==1.9.0
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.20.0
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+idna==3.11
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mpmath==1.3.0
+multidict==6.7.0
+narwhals==2.8.0
+networkx==3.5
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+plotly==6.3.1
+propcache==0.4.1
+protobuf==6.33.0
+pyarrow==21.0.0
+pycparser==2.23
+pydeck==0.9.1
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.27.1
+scipy==1.16.2
+six==1.17.0
+smmap==5.0.2
+soundfile==0.13.1
+streamlit==1.50.0
+streamlit-option-menu==0.4.0
+sympy==1.14.0
+tenacity==9.1.2
+toml==0.10.2
+torch==2.9.0
+torchvision==0.24.0
+tornado==6.5.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+watchdog==6.0.0
+wfdb==4.3.0
+yarl==1.22.0
