--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ multidict==6.7.0
 narwhals==2.8.0
 networkx==3.5
 numpy==2.2.6
-opencv-python==4.12.0.88
+opencv-python-headless>=4.8.0
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
@@ -64,3 +64,4 @@ urllib3==2.5.0
 watchdog==6.0.0
 wfdb==4.3.0
 yarl==1.22.0
+
